@@ -7,19 +7,21 @@
  */
 $success= false;
 
-/* map of Policy -> Template */
+/* map of Template -> TemplateGroup */
 $map = array(
-    'Resource' => 'Object',
-    'Administrator' => 'Admin',
-    'Load Only' => 'Object',
-    'Element' => 'Object',
+    'ResourceTemplate' => 'Object',
+    'AdministratorTemplate' => 'Admin',
+    'ObjectTemplate' => 'Admin',
+    'ElementTemplate' => 'Object',
 );
 
 $templates = $transport->xpdo->getCollection('modAccessPolicyTemplate');
 foreach ($templates as $template) {
     $pk = isset($map[$template->get('name')]) ? $map[$template->get('name')] : 'Admin';
     $templateGroup = $transport->xpdo->getObject('modAccessPolicyTemplateGroup',array('name' => $pk));
-    $template->set('template_group',$templateGroup->get('id'));
-    $success = $template->save();
+    if ($templateGroup) {
+        $template->set('template_group',$templateGroup->get('id'));
+        $success = $template->save();
+    }
 }
 return $success;
